--- a/public/styles.css
+++ b/public/styles.css
@@ -38,3 +38,21 @@ main{
     object-fit: cover;
     margin-top: 10px;
 }
+
+
+
+.joinchat{
+    align-items:center ;
+   justify-content: center;
+   display: flex;
+ 
+}
+.joinchat a{
+    text-decoration: none;
+    font-weight: 800;
+}
+
+.joinchat button{
+    width:5rem;
+    height: 2.5rem;
+}
