--- a/public/styles.css
+++ b/public/styles.css
@@ -33,8 +33,8 @@ main{
 
 .welcome img{
     border-radius: 50%;
-    width: 200px;
-    height: 200px;
+    width: 300px;
+    height: 300px;
     object-fit: cover;
     margin-top: 10px;
 }
@@ -42,6 +42,7 @@ main{
 
 
 .joinchat{
+    margin-top: 30px;
     align-items:center ;
    justify-content: center;
    display: flex;
@@ -53,6 +54,6 @@ main{
 }
 
 .joinchat button{
-    width:5rem;
-    height: 2.5rem;
+    width:7rem;
+    height: 4rem;
 }
