--- a/public/styles.css
+++ b/public/styles.css
@@ -50,10 +50,14 @@ main{
 }
 .joinchat a{
     text-decoration: none;
-    font-weight: 800;
+    font-weight: 900;
+    font-size: 1.1rem;
+    font-family: "Nunito Sans", "Roboto Condensed", serif;
+    color: #000;
 }
 
 .joinchat button{
     width:7rem;
-    height: 4rem;
+    height: 3.5rem;
+    background-color: #2AABEE;
 }
