--- a/public/styles.css
+++ b/public/styles.css
@@ -5,6 +5,7 @@
 *{
     margin: 0%;
     padding: 0%;
+    font-family: "Nunito Sans", "Roboto Condensed", serif;
 }
 
 .header{
@@ -19,6 +20,39 @@
 }
 
 
+    
+
+
+.navbar{
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 20px;
+    height: 10vh;
+    align-items: center;
+    border-bottom: 1px solid #ddd;
+    background:  #2AABEE;
+}
+
+.nav-right{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.nav-right .user-photo{
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 2px solid #ddd;
+}
+
+.nav-right span{
+    font-size: 18px;
+    font-weight: bold;
+    color:
+}
+
 main{
     background: #8C8C8C;
     height: 100vh;
@@ -29,6 +63,11 @@ main{
 .welcome{
     text-align: center;
     padding-top: 5rem;
+}
+
+.welcome h1{
+    font-family:"Nunito Sans", "Roboto Condensed", serif;
+    font-weight: 700;
 }
 
 .welcome img{
