--- a/public/styles.css
+++ b/public/styles.css
@@ -48,9 +48,9 @@
 }
 
 .nav-right span{
-    font-size: 18px;
+    font-size: 10px;
     font-weight: bold;
-    color:
+    color: #333;
 }
 
 main{
@@ -72,8 +72,8 @@ main{
 
 .welcome img{
     border-radius: 50%;
-    width: 300px;
-    height: 300px;
+    width: 250px;
+    height: 250px;
     object-fit: cover;
     margin-top: 10px;
 }
