--- a/public/styles.css
+++ b/public/styles.css
@@ -74,8 +74,13 @@ main{
     font-weight: 700;
 }
 
-.welcome img{
-
+#welcomeimg{
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    margin-top: 10px;
+}
 
 
 
