styling chatroom nav

--- a/public/styles.css
+++ b/public/styles.css
@@ -33,9 +33,11 @@
     background:  #2AABEE;
 }
 
-.nav-left h1{
-height: 40px;
+.nav-left{
+    font-size: 15px;
 }
+
+
 
 .nav-right{
     display: flex;
