--- a/public/styles.css
+++ b/public/styles.css
@@ -130,22 +130,38 @@ main{
   
   .message {
     padding: 10px;
+    margin: 5px 0;
     border-radius: 8px;
     max-width: 70%;
   }
   
-  .message.user {
-    background-color: #007bff;
-    color: white;
-    align-self: flex-end;
-  }
+  .message strong {
+    color: #007bff;
+}
+
+.message p {
+  margin: 0;
+}
+
+.message.self {
+  background-color: #007bff;
+  color: #fff;
+  margin-left: auto;
+  text-align: right;
+}
+
+.message.user {
+  background-color: #007bff;
+  color: white;
+  margin-left: auto;
+  text-align: right;
+}
   
-  .message.other {
-    background-color: #e4e6eb;
-    color: black;
-    align-self: flex-start;
-  }
-  
+.message.other {
+  background-color: #f1f1f1;
+  color: black;
+  margin-right: auto;
+}
   .input-area {
     display: flex;
     align-items: center;
