adding chat function

--- a/public/styles.css
+++ b/public/styles.css
@@ -140,7 +140,7 @@ main{
 }
 
 .message p {
-  margin: 0;
+  margin: 5px 0 0;
 }
 
 .message.self {
@@ -150,18 +150,18 @@ main{
   text-align: right;
 }
 
-.message.user {
-  background-color: #007bff;
-  color: white;
-  margin-left: auto;
-  text-align: right;
-}
+  .message.user {
+    background-color: #007bff;
+    color: white;
+    align-self: flex-end;
+  }
   
-.message.other {
-  background-color: #f1f1f1;
-  color: black;
-  margin-right: auto;
-}
+  .message.other {
+    background-color: #e4e6eb;
+    color: black;
+    align-self: flex-start;
+  }
+  
   .input-area {
     display: flex;
     align-items: center;
